--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -1,4 +1,4 @@
-.info {
+.faq-info {
     display: flex;  
     align-items: center;
     margin: 20px;
