--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -1,4 +1,4 @@
-main .heading h1{
+main .menu-heading h1{
     width: 950px;
     font-size: 60px;
     font-weight: bolder;
