--- a/src/styles/partnership.css
+++ b/src/styles/partnership.css
@@ -32,7 +32,7 @@
 }
 
 .partnership-container .partnership{
-    width: 75%;
+    width: 70%;
     text-align: center;
     font-size: 20px;
     font-weight: 500;
@@ -40,7 +40,7 @@
     margin-top: 20px;
 }
 
-.info{
+.partnership-info{
     margin-top: 50px;
     margin-left: 30px;
     display: flex;
@@ -48,7 +48,7 @@
     align-items: center;
 }
 
-.info .line {
+.partnership-info .line {
     border-left: 4px solid red;
     padding-left: 10px;
     color: red;
@@ -56,25 +56,25 @@
     line-height: 55px;  
 }
 
-.info .highlight {
+.partnership-info .highlight {
     font-weight: bold;
     color: red;
     font-size: 70px;
 }
 
-.info .commitment{
+.partnership-info .commitment{
     width: 80%;
     font-size: 20px;
     margin: 20px;
 }
 
-.info .achievements{
+.partnership-info .achievements{
     width: 100%;
     font-size: 20px;
     margin: 20px;
 }
 
-.info .role{
+.partnership-info .role{
     width: 100%;
     font-size: 20px;
     margin: 20px;
@@ -123,24 +123,24 @@
         font-size: 15px;
     }
 
-    .info .line {
+    .partnership-info .line {
         font-size: 40px;
         line-height: 55px;  
     }
     
-    .info .highlight {
+    .partnership-info .highlight {
         font-size: 50px;
     }
     
-    .info .commitment{
+    .partnership-info .commitment{
         font-size: 15px;
     }
     
-    .info .achievements{
+    .partnership-info .achievements{
         font-size: 15px;
     }
     
-    .info .role{
+    .partnership-info .role{
         font-size: 15px;
     }
 }
@@ -196,24 +196,24 @@
         font-size: 12px;
     }
 
-    .info .line {
+    .partnership-info .line {
         font-size: 20px;
         line-height: 30px;  
     }
     
-    .info .highlight {
+    .partnership-info .highlight {
         font-size: 30px;
     }
     
-    .info .commitment{
+    .partnership-info .commitment{
         font-size: 12px;
     }
     
-    .info .achievements{
+    .partnership-info .achievements{
         font-size: 12px;
     }
     
-    .info .role{
+    .partnership-info .role{
         font-size: 12px;
     }
 }
